# swagger.yaml
@@ -78,7 +78,7 @@ paths:
           schema:
             $ref: "#/definitions/TransportError"
   /v1/auth/refresh:
-    post:
+    patch:
       tags:
         - auth
       summary: Refresh token
@@ -107,6 +107,31 @@ paths:
           description: Internal server error
           schema:
             $ref: "#/definitions/TransportError"
+  /v1/auth/logout:
+    delete:
+      tags:
+        - auth
+      summary: Logout user
+      description: Logout user and invalidate refresh token
+      operationId: logoutUser
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/LogoutRequest"
+      responses:
+        204:
+          description: Successfully logged out
+        401:
+          description: Unauthorized (invalid refresh token)
+          schema:
+            $ref: "#/definitions/TransportError"
+        500:
+          description: Internal server error
+          schema:
+            $ref: "#/definitions/TransportError"
+
 
 definitions:
   RegisterUserRequest:
@@ -220,6 +245,7 @@ definitions:
       auth_token:
         $ref: "#/definitions/AuthTokenResponse"
         description: "Successful login response, returns tokens"
+
   RefreshTokenRequest:
     type: object
     description: "Request to refresh an expired access token"
@@ -229,6 +255,17 @@ definitions:
       refresh_token:
         type: string
         description: "The refresh token obtained during login or previous refresh"
+        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+
+  LogoutRequest:
+    type: object
+    description: "Request to logout"
+    required:
+      - refresh_token
+    properties:
+      refresh_token:
+        type: string
+        description: "The refresh token for logout"
         example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 
   RefreshTokenResponse:
